# tinker-cookbook

./: .gitignore  pyproject.toml
tinker_cookbook/: completers.py
tinker_cookbook/pbt/: mutations.py  train.py  types.py
tinker_cookbook/recipes/pbt_rl/: train.py
tinker_cookbook/rl/: train.py
tinker_cookbook/tests/: smoke_tests.py  test_pbt.py  test_pbt_integration.py  test_seed.py  test_seed_integration.py
